fixed portfolio layout issues

--- a/app/assets/styles/modules/_portfolio.scss
+++ b/app/assets/styles/modules/_portfolio.scss
@@ -2,7 +2,10 @@
 
 	&__item {
 		margin-top: 30px;
-		overflow: auto;
+		@include bp-mamaBear {
+			height: 350px;
+			overflow: auto;
+		}
 	}
 
 	&__item-header {
@@ -23,19 +26,17 @@
 			float: none;
 			font-size: 16px;
 			padding: 5px 15px;
-			margin: 0 15px 15px 15px;
+			margin: 0 15px 15px 0;
 			color: #fff;
 			border-radius: 15px;
-			text-align: left;
-			padding: 5px 0;
+			text-align: left;			
+			background-color: $mainBlue;
+			display: inline-block;
+			list-style: none;
 
 			@include bp-mamaBear {
 				float: left;
-				margin-right: 15px;
 				margin-left: 0;
-				background-color: $mainBlue;
-				list-style: none;
-				padding: 5px 15px;
 			}
 		}
 	}
